# numeraire-graphics

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: .gitignore  api.md  conf.py  gallery.md  index.md  installation.md
src/numeraire_graphics/: __init__.py  _common.py  outputs.py  plots.py  theme.py
src/numeraire_viz/: __init__.py  _common.py  outputs.py  plots.py  theme.py
tests/: conftest.py  test_common.py  test_helpers.py  test_outputs.py  test_plots.py  test_polish.py
