[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numeraire-viz"
version = "0.1.0"
description = "Grammar-of-graphics figures over the numeraire tidy result schema (plotnine primary)."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [{ name = "Yuheng Wu", email = "wuyuheng20074@live.com" }]
keywords = ["asset-pricing", "backtesting", "plotnine", "grammar-of-graphics", "numeraire"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "numeraire>=0.2,<0.3",
  "plotnine>=0.14",
  "matplotlib>=3.8",
  "mizani>=0.11",
]

[project.optional-dependencies]
# Planned, not yet implemented (see README):
#   altair = ["altair", "vl-convert-python", "vegafusion"]   # narwhals-native exploration surface
#   tables = ["great-tables"]                                # publication tables companion
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "basedpyright>=1.18",
  # Match the installed pandas (2.2.x) so basedpyright uses the maintained stubs.
  "pandas-stubs>=2.2,<2.3",
]

[project.urls]
Homepage = "https://github.com/py-numeraire/numeraire-viz"
Repository = "https://github.com/py-numeraire/numeraire-viz"

# Local development resolves numeraire from the sibling checkout until it is on PyPI.
[tool.uv.sources]
numeraire = { path = "../numeraire", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/numeraire_viz"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["src/numeraire_viz"]
# plotnine / mizani ship no type stubs; treat their untyped surface as dynamic rather than
# erroring on every call. Scoped to the plotting libraries — numeraire and pandas stay checked.
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=numeraire_viz --cov-report=term-missing"

[tool.coverage.run]
source = ["src/numeraire_viz"]
