[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "numeraire-graphics"
dynamic = ["version"]
description = "Grammar-of-graphics figures over the numeraire tidy result schema (plotnine primary)."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [{ name = "Yuheng Wu", email = "wuyuheng20074@live.com" }]
keywords = ["asset-pricing", "backtesting", "plotnine", "grammar-of-graphics", "numeraire"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Visualization",
  "Typing :: Typed",
]
dependencies = [
  "numeraire>=0.2,<0.3",
  "plotnine>=0.14",
  "matplotlib>=3.8",
  "mizani>=0.11",
]

[project.optional-dependencies]
# Planned, not yet implemented (see README):
#   altair = ["altair", "vl-convert-python", "vegafusion"]   # narwhals-native exploration surface
#   tables = ["great-tables"]                                # publication tables companion
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "basedpyright>=1.18",
  # Match the installed pandas (2.2.x) so basedpyright uses the maintained stubs.
  "pandas-stubs>=2.2,<2.3",
]
docs = [
  "sphinx>=7.3",
  "pydata-sphinx-theme>=0.15",
  "myst-parser>=3.0",
  "sphinx-design>=0.6",
]

[project.urls]
Homepage = "https://github.com/py-numeraire/numeraire-graphics"
Documentation = "https://graphics.py-numeraire.org/"
Repository = "https://github.com/py-numeraire/numeraire-graphics"
Issues = "https://github.com/py-numeraire/numeraire-graphics/issues"

# Local development resolves numeraire from the sibling checkout (overriding the PyPI dependency).
[tool.uv.sources]
numeraire = { path = "../numeraire", editable = true }

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/numeraire_graphics"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["src/numeraire_graphics"]
# plotnine / mizani ship no type stubs; treat their untyped surface as dynamic rather than
# erroring on every call. Scoped to the plotting libraries — numeraire and pandas stay checked.
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=numeraire_graphics --cov-report=term-missing"

[tool.coverage.run]
source = ["src/numeraire_graphics"]
